I implemented the screen of view initial of the project.

--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,3 +1,44 @@
-<p>
-  welcome works!
-</p>
+<section class="container-fluid">
+	<img src="assets/img/darth-vader.png" alt="Darth Vader Mask">
+
+	<div id="info-game" class="jumbotron">
+		<h1>Star Quiz!</h1>
+		<p class="lead">O quiz para você provar de vez o quanto é fera no assunto.</p>
+
+		<div class="row">
+			<div class="col jumbotron info">
+				<header>
+					<h2>Desafio para um Jedi!</h2>
+				</header>
+
+				<div class="box-info">
+					<p>
+						<b>Luke Skywalker:</b> Você conhece os personagens de Star Wars?</p>
+					<p>
+						<b>Luke Skywalker:</b> Sim? Então mostre-nos!</p>
+
+					<p>Com esse quiz você terá oportunidade de identificar os principais personagens de Star Wars, marcar pontos e se tornar
+						um expert nesta série de filmes maravilhosa!</p>
+				</div>
+			</div>
+
+			<div class="col jumbotron info">
+				<header>
+					<h2>Veja quais são as regras:</h2>
+				</header>
+				<ul class="box-info">
+					<ol>
+						<li>Você terá 2 minutos para fazer o teste;</li>
+						<li>Seu objetivo é acertar o nome da maior quantidade de personagens possível;</li>
+						<li>Você poderá receber dicas em cada personagem caso deseje;</li>
+						<li>A cada acerto você ganhará 10 pontos;</li>
+						<li>Se utilizar a ajuda, no caso de acerto, ganhará apenas 5 pontos;</li>
+						<li>Você poderá errar quantas vezes quiser;</li>
+					</ol>
+				</ul>
+			</div>
+		</div>
+
+		<button class="btn btn-lg btn-block btn-success">Iniciar</button>
+	</div>
+</section>
