I needed to make adjusts on component welcome.component.

--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -2,7 +2,7 @@
 	<img src="assets/img/darth-vader.png" alt="Darth Vader Mask">
 
 	<div id="info-game" class="jumbotron">
-		<h1>Star Quiz!</h1>
+		<h1>StarQuiz!</h1>
 		<p class="lead">O quiz para você provar de vez o quanto é fera no assunto.</p>
 
 		<div class="row">
@@ -39,6 +39,6 @@
 			</div>
 		</div>
 
-		<button class="btn btn-lg btn-block btn-success">Iniciar</button>
+		<button class="btn btn-lg btn-block btn-success" [routerLink]="['/game']" routerLinkActive="active">Iniciar</button>
 	</div>
 </section>
