--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -23,6 +23,6 @@
 	</p>
 
 	<div class="row">
-		<app-box-personage class="col" (pontuacao)="setPontuation($event, personage['name'])" (detalhe)="setDetail($event)" [personageDetail]="personage" *ngFor="let personage of personages"></app-box-personage>
+		<app-box-personage class="col" (pontuation)="setPontuation($event, personage['name'])" (details)="setDetail($event)" [personageDetail]="personage" *ngFor="let personage of personages"></app-box-personage>
 	</div>
 </section>
