--- a/src/app/components/game/shared/modal-generic/modal-generic.component.css
+++ b/src/app/components/game/shared/modal-generic/modal-generic.component.css
@@ -26,3 +26,28 @@ h5 {
     font-weight: bold;
     text-transform: uppercase;
 }
+
+/* Modal Result */
+
+.jumbotron {
+    padding: 2rem;
+    text-align: center;
+}
+
+span:nth-child(2) {
+    color: #212529;
+    font-size: 25pt;
+}
+
+p {
+    text-align: center;
+    font-weight: bold;
+    font-size: 13pt;
+}
+
+input {
+    margin-bottom: 10px;
+}
+
+
+/* #modal-result > p {} */
