--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -39,6 +39,6 @@
 			</div>
 		</div>
 
-		<button class="btn btn-lg btn-block btn-success" [routerLink]="['/game']" routerLinkActive="active">Iniciar</button>
+		<button class="btn btn-block btn-success" [routerLink]="['/game']" routerLinkActive="active">Iniciar</button>
 	</div>
 </section>
