--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,4 +1,10 @@
 <section class="container-fluid">
+
+	<div class="alert alert-secondary" role="alert">
+		<p>{{ showPhrase["frase"] }}</p>
+		<p>{{ showPhrase["author"] }}</p>
+	</div>
+
 	<img src="assets/img/darth-vader.png" alt="Darth Vader Mask">
 
 	<div id="info-game" class="jumbotron">
