Created the logical to restart clock and the points.

--- a/src/app/components/game/shared/box-personage/box-personage.component.html
+++ b/src/app/components/game/shared/box-personage/box-personage.component.html
@@ -21,4 +21,4 @@
   </div>
 </div>
 
-<app-modal-generic [personageDetail]="personageDetail" [pontuation]="result" (openModalNext)="openModalNext($event)"></app-modal-generic>
+<app-modal-generic [personageDetail]="personageDetail" [pontuation]="result" (openModalNext)="openModalNext($event)" (reloadGame)="playAgain($event)"></app-modal-generic>
