--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -23,7 +23,8 @@
 	</p>
 
 	<div class="row">
-		<app-box-personage class="col" (pontuation)="setPontuation($event, personage['name'])" (details)="setDetail($event)" [personageDetail]="personage"
+		<app-box-personage class="col" (pontuation)="setPontuation($event, personage['name'])" (details)="setDetail($event)" 
+		(reloadGame)="cronometro()" [personageDetail]="personage"
 		 *ngFor="let personage of personages[0]" [pathImage]=[personage] [personage]=[personage]></app-box-personage>
 	</div>
 </section>
