--- a/src/app/components/game/shared/modal-generic/modal-generic.component.html
+++ b/src/app/components/game/shared/modal-generic/modal-generic.component.html
@@ -59,14 +59,11 @@
 </div>
 
 <!-- Modal Result -->
-<div class="modal fade" id="modalResult" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" data-keyboard="false" data-backdrop="static" id="modalResult" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title" id="exampleModalLabel">Quiz finalizado!</h5>
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
 			</div>
 			<div id="modal-result" class="modal-body">
 				<div class="jumbotron">
@@ -92,14 +89,14 @@
 </div>
 
 <!-- Modal Next -->
-<div class="modal fade" id="modalNext" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" data-keyboard="false" data-backdrop="static" id="modalNext" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title" id="exampleModalLabel">{{ name }}, você ainda pode!</h5>
 			</div>
 			<div class="modal-body">
-				<button class="btn btn-primary btn-block" data-dismiss="modal" aria-label="Close">Jogar Novamente</button>
+				<button class="btn btn-primary btn-block" data-dismiss="modal" aria-label="Close" (click)="playAgain()">Jogar Novamente</button>
 				<button class="btn btn-info btn-block">Ranking</button>
 				<button class="btn btn-danger btn-block" data-dismiss="modal" aria-label="Close" [routerLink]="['/home']" routerLinkActive="active">Sair</button>
 			</div>
