--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,5 +1,4 @@
 <section class="container-fluid">
-
 	<div class="alert alert-secondary" role="alert">
 		<p>{{ showPhrase["frase"] }}</p>
 		<p>{{ showPhrase["author"] }}</p>
@@ -45,6 +44,7 @@
 			</div>
 		</div>
 
+		<!-- Router that will call the component game -->
 		<button class="btn btn-block btn-success" [routerLink]="['/game']" routerLinkActive="active">Iniciar</button>
 	</div>
 </section>
