Add logo of the star wars and adjusted the image of personage.

--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -4,6 +4,7 @@
 		<p>{{ showPhrase["author"] }}</p>
 	</div>
 
+	<img src="assets/img/stw.png" class="logo" alt="Star Wars logo">
 	<img src="assets/img/darth-vader.png" alt="Darth Vader Mask">
 
 	<div id="info-game" class="jumbotron">
