--- a/src/app/components/welcome/welcome.component.css
+++ b/src/app/components/welcome/welcome.component.css
@@ -1,3 +1,10 @@
+.logo {
+    left: 80%;
+    position: absolute;
+    top: 0;
+    width: 15%;
+}
+
 img {
     display: block;
     margin: 30px auto;
@@ -75,6 +82,11 @@ button {
     
     button {
         width: 100%;
+    }
+
+    .logo {
+        left: 73%;
+        width: 20%;
     }
 }
 
